public class Snapshot {
    public int active = 0;
    public int jailed = 0;
    public int quiet = 0;
    public int dead = 0;
}
