@startuml Rebellion

class Agent {
    - double deathChance {readOnly}
    - double governmentLegitimacy {readOnly}
    - double k {readOnly}
    - double perceivedHardshipIncreaseRate {readOnly}
    - double riskAversion {readOnly}
    - double threshold {readOnly}
    - boolean active
    - boolean dead
    - int jailTerm
    - double perceivedHardship
    + Agent(double governmentLegitimacy, double k, double threshold, double deathChance, boolean move)
    + boolean getActive()
    - void setActive()
    - double getGrievance()
    + int getJailTerm()
    + void setJailTerm()
    + void getDead()
    - void notifyDeath()
}

class Cop {
    - int maxJailTerm {readOnly}
    + Cop(int maxJailTerm, boolean move)
}

class Location {
    - int xPos
    - int yPos
    + Location(int xPos, int yPos)
    + int getXPos()
    + int getYPos()
}

class Main {
    - double birthRate {readOnly}
    - double deathChance {readOnly}
    - double governmentLegimacy {readOnly}
    - double k {readOnly}
    - int maxJailTerm {readOnly}
    - boolean move {readOnly}
    - String output {readOnly}
    - double perceivedHardshipIncreaseRate {readOnly}
    - double threshold {readOnly}
    - double vision {readOnly}
    - double agentsToBeBorn
    + Main(double governmentLegimacy, int maxJailTerm, int vision, double copDensity, double agentDensity, int worldSize, double k, double threshold, boolean move, double deathChance, double birthRate, double perceivedHardshipIncreaseRate, String output)
    - void createCops(int numCops)
    - void createAgents(int numAgents)
    - void recordSnapshot()
    + void start()
    - Set<Tile> visibleTiles(Location location)
    + void main(String[] args) {static}
}

abstract class Person {
    # boolean move
    + Person(boolean move)
    + void takeTurn(Collection<Tile> visibleTiles)
    + Tile getTile()
    + void setTile(Tile tile)
}

class Snapshot {
    + int active
    + int jailed
    + int quiet
    + int dead
}

class Tile {
    + Tile(Location location)
    + Set<Person> getPeople()
    + boolean empty()
    + Location getLocation()
    + void addPerson(Person person)
    + void removePerson(Person person)
}


Main --* "*" Tile : - tiles
Main --* "*" Snapshot : - snapshots
Agent --|> Person
Cop --|> Person
Tile --* "*" Person : - people
Person --* "1" Tile : # tile
Tile --* "1" Location : - location

@enduml
